[tool.poetry]
name = "k-means-plus-plus"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
scikit-learn = "^0.24.2"
pandas = "^1.2.5"
jupyterlab = "^3.0.16"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
